# orbistream

./: .gitignore  README.md  build-apk.sh  build-native.sh  build.gradle.kts  gradle.properties  install.sh  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/libs/: .gitkeep
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  orbistream_jni.cpp  srt_streamer.cpp  srt_streamer.h
app/src/main/java/bondix/pkg/: Bondix.kt  SocketBindCallback.kt
app/src/main/java/com/orbistream/: OrbiStreamApp.kt
app/src/main/java/com/orbistream/bondix/: BondixManager.kt  NetworkRegistry.kt  SocketBinder.kt  Socks5UdpRelay.kt
app/src/main/java/com/orbistream/data/: SettingsRepository.kt
app/src/main/java/com/orbistream/streaming/: AudioCapture.kt  CameraManager.kt  NativeStreamer.kt  StreamingService.kt
app/src/main/java/com/orbistream/ui/: MainActivity.kt  SettingsActivity.kt  StreamingActivity.kt
app/src/main/java/org/freedesktop/gstreamer/: GStreamer.java
app/src/main/jni/: Android.mk  Application.mk  orbistream_jni.cpp  srt_streamer.cpp  srt_streamer.h
app/src/main/res/drawable/: bg_gradient.xml  bg_status_card.xml  ic_settings.xml  ic_stream.xml  status_indicator.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  activity_streaming.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/org/freedesktop/gstreamer/: GStreamer.java
docs/: ARCHITECTURE.md  bondix-integration-notes.md  ios-port-prompt.md
docs/integration/: README.md
gradle/wrapper/: gradle-wrapper.properties
